# research_better-viz

./: .gitignore  README.md  pyproject.toml  readWithPandas.py  requirements.txt
pythonFiles/: bokehGraph.py  matplotlibGraph.py  plotlyGraph.py  readWithPandas.py  seabornGraph.py  thing.html
src/: __init__.py  generateMetrics.bash  matplotlib.py  test_matplotlib.py  test_plotly.py  test_seaborn.py
